summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value WEST
    setDirection(WEST);avance();prendBiscuit();setDirection(EAST);avance()
                 ^Moria:3: error: not found: value EAST
    setDirection(WEST);avance();prendBiscuit();setDirection(EAST);avance()
                                                            ^