summative.moria.Moria.scala.code
def moria(){
  while (!estSurBiscuit()){
    setDirection(WEST);avance();prendBiscuit();setDirection(EAST);avance()
  }
  
}